changes for bitcoin cash text wrap issue

--- a/src/components/CurrencyList/_CurrencyList.scss
+++ b/src/components/CurrencyList/_CurrencyList.scss
@@ -16,7 +16,7 @@
 		.single-currency {
 			position: relative;
 			justify-content: center;
-			min-width: 7rem;
+			min-width: 15rem;
 			padding: 0 1rem;
 			border-left: 1px solid;
 			border-right: 1px solid;
